tests/baselines/reference/covariantCallbacks.errors.txt
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/covariantCallbacks.ts(12,5): error TS2322: Type 'P<A>' is not assignable to type 'P<B>'.
  Property 'b' is missing in type 'A' but required in type 'B'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/covariantCallbacks.ts(17,5): error TS2322: Type 'Promise<A>' is not assignable to type 'Promise<B>'.
  Type 'A' is not assignable to type 'B'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/covariantCallbacks.ts(30,5): error TS2322: Type 'AList1' is not assignable to type 'BList1'.
  Types of property 'forEach' are incompatible.
    Type '(cb: (item: A) => void) => void' is not assignable to type '(cb: (item: B) => void) => void'.
      Types of parameters 'cb' and 'cb' are incompatible.
        Types of parameters 'item' and 'item' are incompatible.
          Type 'A' is not assignable to type 'B'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/covariantCallbacks.ts(43,5): error TS2322: Type 'AList2' is not assignable to type 'BList2'.
  Types of property 'forEach' are incompatible.
    Types of parameters 'cb' and 'cb' are incompatible.
      Type 'void' is not assignable to type 'boolean'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/covariantCallbacks.ts(56,5): error TS2322: Type 'AList3' is not assignable to type 'BList3'.
  Types of property 'forEach' are incompatible.
    Type '(cb: (item: A) => void) => void' is not assignable to type '(cb: (item: A, context: any) => void) => void'.
      Types of parameters 'cb' and 'cb' are incompatible.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/covariantCallbacks.ts(69,5): error TS2322: Type 'AList4' is not assignable to type 'BList4'.
  Types of property 'forEach' are incompatible.
    Type '(cb: (item: A) => A) => void' is not assignable to type '(cb: (item: B) => B) => void'.
      Types of parameters 'cb' and 'cb' are incompatible.
        Types of parameters 'item' and 'item' are incompatible.
          Type 'A' is not assignable to type 'B'.


==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/covariantCallbacks.ts (6 errors) ====
    // Test that callback parameters are related covariantly
    
    interface P<T> {
        then(cb: (value: T) => void): void;
    };
    
    interface A { a: string }
    interface B extends A { b: string }
    
    function f1(a: P<A>, b: P<B>) {
        a = b;
        b = a;  // Error
        ~
!!! error TS2322: Type 'P<A>' is not assignable to type 'P<B>'.
!!! error TS2322:   Property 'b' is missing in type 'A' but required in type 'B'.
!!! related TS2728 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/covariantCallbacks.ts:8:25: 'b' is declared here.
    }
    
    function f2(a: Promise<A>, b: Promise<B>) {
        a = b;
        b = a;  // Error
        ~
!!! error TS2322: Type 'Promise<A>' is not assignable to type 'Promise<B>'.
!!! error TS2322:   Type 'A' is not assignable to type 'B'.
    }
    
    interface AList1 {
        forEach(cb: (item: A) => void): void;
    }
    
    interface BList1 {
        forEach(cb: (item: B) => void): void;
    }
    
    function f11(a: AList1, b: BList1) {
        a = b;
        b = a;  // Error
        ~
!!! error TS2322: Type 'AList1' is not assignable to type 'BList1'.
!!! error TS2322:   Types of property 'forEach' are incompatible.
!!! error TS2322:     Type '(cb: (item: A) => void) => void' is not assignable to type '(cb: (item: B) => void) => void'.
!!! error TS2322:       Types of parameters 'cb' and 'cb' are incompatible.
!!! error TS2322:         Types of parameters 'item' and 'item' are incompatible.
!!! error TS2322:           Type 'A' is not assignable to type 'B'.
    }
    
    interface AList2 {
        forEach(cb: (item: A) => boolean): void;
    }
    
    interface BList2 {
        forEach(cb: (item: A) => void): void;
    }
    
    function f12(a: AList2, b: BList2) {
        a = b;
        b = a;  // Error
        ~
!!! error TS2322: Type 'AList2' is not assignable to type 'BList2'.
!!! error TS2322:   Types of property 'forEach' are incompatible.
!!! error TS2322:     Types of parameters 'cb' and 'cb' are incompatible.
!!! error TS2322:       Type 'void' is not assignable to type 'boolean'.
    }
    
    interface AList3 {
        forEach(cb: (item: A) => void): void;
    }
    
    interface BList3 {
        forEach(cb: (item: A, context: any) => void): void;
    }
    
    function f13(a: AList3, b: BList3) {
        a = b;
        b = a;  // Error
        ~
!!! error TS2322: Type 'AList3' is not assignable to type 'BList3'.
!!! error TS2322:   Types of property 'forEach' are incompatible.
!!! error TS2322:     Type '(cb: (item: A) => void) => void' is not assignable to type '(cb: (item: A, context: any) => void) => void'.
!!! error TS2322:       Types of parameters 'cb' and 'cb' are incompatible.
    }
    
    interface AList4 {
        forEach(cb: (item: A) => A): void;
    }
    
    interface BList4 {
        forEach(cb: (item: B) => B): void;
    }
    
    function f14(a: AList4, b: BList4) {
        a = b;
        b = a;  // Error
        ~
!!! error TS2322: Type 'AList4' is not assignable to type 'BList4'.
!!! error TS2322:   Types of property 'forEach' are incompatible.
!!! error TS2322:     Type '(cb: (item: A) => A) => void' is not assignable to type '(cb: (item: B) => B) => void'.
!!! error TS2322:       Types of parameters 'cb' and 'cb' are incompatible.
!!! error TS2322:         Types of parameters 'item' and 'item' are incompatible.
!!! error TS2322:           Type 'A' is not assignable to type 'B'.
    }
    